# color-theory

./: package-lock.json
color-generator-next/: package-lock.json  package.json
color-generator-next/src/lib/: constants.tsx  types.tsx
color-generator-next/src/lib/components/: colour-input-panel.tsx  mock-site-preview.tsx  palette-display.tsx
color-theory-next/src/app/: globals.css  page.tsx
color-theory-next/src/lib/: colour-psych.tsx
color-theory-next/src/lib/components/: colour-details-panel.tsx  mock-site-preview.tsx  palette-display.tsx
color-theory-react/: package-lock.json  package.json
color-theory-react/src/: App.css  App.jsx  App_.jsx  constants.jsx
colour_theory_python/: pyproject.toml
colour_theory_python/colour_theory/: colours.py
